# TiddlyDesktop

./: .gitignore  ANDROID.md  CLAUDE.md  Documentation.md  Info.plist  LICENSE  bld.sh  commit-message.txt  default.nix  download-nwjs.sh  flake.nix  package-lock.json  package.json  package.sh  propagate-version.js  propogate-version.js  readme.md  run.sh  tiddlydesktop.nix
.github/workflows/: ci.yml
TiddlyDesktopAndroid/: .gitignore  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
TiddlyDesktopAndroid/app/: build.gradle.kts  proguard-rules.pro
TiddlyDesktopAndroid/packaging/: build-wikilist.sh  fetch-node-libs.sh
app-wiki/: tiddlywiki.info
app-wiki/tiddlers/: SaveTemplate.tid
icons/: app.icns  app.iconsproj
linux/: tiddlydesktop.desktop
plugins/codemirror-6-collab-nwjs/: plugin.info  readme.tid
plugins/tiddlydesktop/: Empty Tiddlywiki.tid  HelloThere.tid  HostWindowToolbar.tid  PluginChooser.tid  Wiki Folder Warning Window.tid  Wiki Folder Warning.tid  WikiList Edit Tags Template.tid  WikiList SearchList Style.tid  WikiList ui Buttons DeleteUnusedTags.tid  WikiList.tid  WikiListRow.tid  WikiListToolbar.tid  WikiListWindow.tid  plugin.info
relay-server/: .gitignore  Cargo.toml  deploy.sh  relay.service  setup-server.sh
relay-server/src/: main.rs
source/: package.json
source/base-config-tiddlywiki/: tiddlywiki.info
source/css/: main.css
source/html/: config-window.html  (+7 more)
strings/: InfoPlist.strings
translations/: build-translations.js  set-language-priority.js  strip-language-priority.js
(+347 files in other folders)
